  * bin/console-conf-serial-wrapper: add --serial to the command-line.
  * debian/console-conf.serial-console-conf@.service: don't pass --serial,
    this is meant to be parameters to agetty, not to the login program.

  [ Steve Langasek ]
  * debian/console-conf-wrapper: trap various signals in our shell script,
    as they should be in console-conf itself.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 30 Aug 2016 13:57:46 -0400

subiquity (0.0.12) yakkety; urgency=medium

  [ Mathieu Trudel-Lapierre ]
  * debian/console-conf.serial-console-conf@.service: start with --serial so
    we don't spew as many control chars on the serial interface. (LP: #1617231)

  [ Michael Hudson-Doyle ]
  * spawn a simple shell wrapper around console-conf initially to reduce
    RAM usage at rest. (LP: #1618239)
  * create log directory more carefully. (LP: #1617236)
  * Wait for a default route rather than networkd-wait-online.

 -- Michael Hudson-Doyle <michael.hudson@ubuntu.com>  Tue, 30 Aug 2016 15:57:59 +1200

subiquity (0.0.11) yakkety; urgency=medium

  * debian/console-conf.dirs: add /var/lib/console-conf.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 26 Aug 2016 16:35:57 -0400

subiquity (0.0.10) yakkety; urgency=medium

  * Release 0.0.10: we want subiquity on all architectures.
  * debian/control: the packages are Architecture: all.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Thu, 25 Aug 2016 21:57:57 -0400

subiquity (0.0.9) yakkety; urgency=medium

  * Release 0.0.9:
    - Fix crash on turning on DHCP for an interface that has manual addresses.
    - Better UI for applying networking changes.
    - Probe network before showing Login screen.

 -- Michael Hudson-Doyle <michael.hudson@ubuntu.com>  Tue, 23 Aug 2016 16:20:09 -0400

subiquity (0.0.7) yakkety; urgency=medium

  * Release 0.0.7:
    - Use netplan for network configuration.
    - console-conf uses snapd for user creation.
