@@ -64,9 +64,6 @@ def parse_options(argv):
     return parser.parse_args(argv)
 
 
-def control_c_handler(signum, frame):
-    sys.exit(1)
-
 LOGDIR = "/var/log/console-conf/"
 
 def main():
@@ -79,7 +76,7 @@ def main():
     logger.info("Starting console-conf v{}".format(VERSION))
     logger.info("Arguments passed: {}".format(sys.argv))
 
-    signal.signal(signal.SIGINT, control_c_handler)
+    signal.signal(signal.SIGINT, signal.SIG_IGN)
 
     env_ok = environment_check(ENVIRONMENT)
     if env_ok is False and not opts.dry_run:
