@@ -11,6 +11,9 @@ subiquity (0.0.13) UNRELEASED; urgency=medium
   * debian/console-conf-wrapper: trap various signals in our shell script,
     as they should be in console-conf itself.
 
+  [ Michael Hudson-Doyle ]
+  * Prevent C-c and C-x from exiting console-conf. 
+
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 30 Aug 2016 13:57:46 -0400
 
 subiquity (0.0.12) yakkety; urgency=medium
